<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_price"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/setPriceInputMax"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input_background"
        android:hint="@string/set_max_price"
        android:inputType="number"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <EditText
        android:id="@+id/setPriceInputMin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_input_background"
        android:hint="@string/set_min_price"
        android:inputType="number"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setPriceInputMax" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/checkHistory"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:text="@string/check_history"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20sp"
        android:layout_marginBottom="50dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/custom_button_background"
        app:layout_constraintTop_toBottomOf="@id/setPriceInputMin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/setPriceButton"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:text="@string/confirm"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="50dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/custom_button_background"
        app:layout_constraintTop_toBottomOf="@id/setPriceInputMin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    

</androidx.constraintlayout.widget.ConstraintLayout>